--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.descriptionSection {
+  padding-top: 3em;
+}
+
+.descriptionSection__title {
+  padding-bottom: 0.5em;
+}
+
+.card {
+  margin-bottom: 1em;
+}
