--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+@import 'components/restaurant/restaurant.css';
 
 body {
   margin: 0;
@@ -14,9 +15,23 @@ code {
     monospace;
 }
 
+/*COMMON*/
 .container {
   margin: 0 auto;
   max-width: 1024px;
   padding: 0px 40px;
   box-sizing: border-box;
+}
+
+.counter {
+  display: flex;
+  justify-content: space-between;
+  min-width: 70px;
+  max-width: 100px;
+}
+
+/*antd CUSTOMISATION*/
+.ant-row-flex,
+.ant-row {
+  padding: 20px 0;
 }
