--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -82,7 +81,7 @@ code {
 }
 
 .dish__item-amount-heading {
-  font-weight: 600;
+  font-weight: 700;
   margin-right: 10px;
 }
 
