--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ code {
 .restaurants__list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   list-style-type: none;
   padding: 10px;
   margin-bottom: 40px;
@@ -55,7 +56,8 @@ code {
 
 /* ---------- Restaurant Item ---------- */
 .restaurant__item {
-  min-width: 50vw;
+  width: 50vw;
+  min-width: 250px;
   background-color: white;
   border: 1px solid #d9d9d9;
   border-radius: 5px;
@@ -69,7 +71,6 @@ code {
   align-items: center;
   text-align: center;
   color: #0288d1;
-  padding-bottom: 20px;
   margin-bottom: 20px;
 }
 .restaurant__item-heading-img {
@@ -80,6 +81,21 @@ code {
   background-size: contain;
   background-position: center;
   margin-right: 10px;
+}
+
+.restaurant__item-rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.restaurant__item-rating-heading {
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 700;
+  color: #9e9e9e;
+  margin: 2px 10px 0 0;
 }
 
 /* ---------- Restaurant Menu ---------- */
