--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+@import '~normalize.css/normalize.css';
 
 body {
   margin: 0;
@@ -7,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f0f2f5;
 }
 
 code {
